# c_learning

c_learning/: CMakeLists.txt  huiwenshu.c
c_learning/day01/: CaDemo.c  define.c  enum.c  exercise01.c  function_01.c  function_02.c  main.c  pointer.c  pointerExercise01.c  st.c  transcation.c
c_learning/day03/: CharDemo.c  arrCopy.c
c_learning/day04/: StaticLinkList.c  callocDemo.c  free.c  mallocDemo.c  voidDemo.c
c_learning/day05/: SimpleLinkList.c  memcmpDemo.c  memcpyDemo.c  memmoveDemo.c  reallocDemo.c  restrictDemo.c  structDemo01.c  structDemo02.c  structDemo03.c  typedefDemo.c
c_learning/day2/: Vister.c  arrSum.c  arrayDemo.c  boolDemo.c  dog.c  paramenter.c  scafDemo.c  unionDemo.c  whatIsPointer.c
