cmake_minimum_required(VERSION 3.24)
project(c_learning C)

set(CMAKE_C_STANDARD 11)

add_executable(c_learning day01/main.c day01/pointer.c day01/pointerExercise01.c day01/transcation.c day01/exercise01.c day01/define.c day01/enum.c day01/function_01.c day01/function_02.c day01/CaDemo.c day01/st.c day2/dog.c day2/Vister.c day2/unionDemo.c day2/scafDemo.c day2/whatIsPointer.c day2/boolDemo.c day2/paramenter.c day2/arrayDemo.c day2/arrSum.c day03/arrCopy.c day03/CharDemo.c day04/StaticLinkList.c day04/voidDemo.c day04/mallocDemo.c day04/free.c day04/callocDemo.c day05/reallocDemo.c day05/restrictDemo.c day05/memcpyDemo.c day05/memmoveDemo.c day05/memcmpDemo.c day05/structDemo01.c day05/structDemo02.c day05/structDemo03.c day05/SimpleLinkList.c day05/typedefDemo.c)
